--- a/dev/tests/integration/testsuite/Mage/Core/Model/_files/design/frontend/test/default/Mage_Core/test.phtml
+++ b/dev/tests/integration/testsuite/Mage/Core/Model/_files/design/frontend/test/default/Mage_Core/test.phtml
@@ -8,4 +8,4 @@
  * @copyright   {copyright}
  * @license     {license_link}
  */
-echo 'Value: ' . $this->getTestValue();
+echo "Value: {$this->getTestValue()} Reference: {$this->getReferenceValue()}\n";
