Implement MAGETWO-1185: javascript refactor - added install_locale.js - added install_bug_tracker.js - removed prototype and scriptaculous  from page.phtml - removed inline js from locale.phtml

--- a/app/code/core/Mage/Install/view/install/locale.phtml
+++ b/app/code/core/Mage/Install/view/install/locale.phtml
@@ -48,14 +48,10 @@
 </div>
 </form>
 <script type="text/javascript">
-    function changeLocale(event){
-        var elem = Event.element(event);
-        if(elem){
-            setLocation('<?php echo $this->getChangeUrl() ?>locale/'+elem.value+'/?timezone='+$('timezone').value+'&amp;currency='+$('currency').value);
+  mage.install = {
+        initialize: {
+            changeUrl: '<?php echo $this->getChangeUrl() ?>locale/' + $('#locale').val() + '/?timezone=' + $('#timezone').val() + '&amp;currency=' + $('#currency').val()
         }
     }
-    var dataForm = new VarienForm('form-validate');
-    if($('locale')){
-        Event.observe($('locale'), 'change', changeLocale);
-    }
+   mage.load.jsSync('/pub/lib/mage/components/install_locale.js');
 </script>
