Implement MAGETWO-1185: javascript refactor - install begin.phtml javascript refactor - mage.load.css to load css file

--- a/app/code/core/Mage/Install/view/install/page.phtml
+++ b/app/code/core/Mage/Install/view/install/page.phtml
@@ -18,27 +18,17 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title><?php echo Mage::helper('Mage_Install_Helper_Data')->__('Magento Installation Wizard') ?></title>
-
 <link rel="icon" href="<?php echo $this->getSkinUrl('Mage_Page::favicon.ico') ?>" type="image/x-icon" />
 <link rel="shortcut icon" href="<?php echo $this->getSkinUrl('Mage_Page::favicon.ico') ?>" type="image/x-icon" />
-
-<!--<script type="text/javascript" src="--><?php //echo $this->getSkinUrl('prototype/prototype.js') ?><!--"></script>-->
-<!--<script type="text/javascript" src="--><?php //echo $this->getSkinUrl('prototype/validation.js') ?><!--"></script>-->
-<!--<script type="text/javascript" src="--><?php //echo $this->getSkinUrl('scriptaculous/effects.js') ?><!--"></script>-->
-<!--<script type="text/javascript" src="--><?php //echo $this->getSkinUrl('mage/translate.js') ?><!--" ></script>-->
-<!--<script type="text/javascript" src="--><?php //echo $this->getSkinUrl('varien/js.js') ?><!--"></script>-->
 <script type="text/javascript" src="/pub/lib/jquery/jquery.js"></script>
 <script type="text/javascript" src="/pub/lib/jquery/head.js"></script>
 <script type="text/javascript" src="/pub/lib/mage/mage.js"></script>
-
+<link rel="stylesheet" href="/pub/lib/mage/component/install/mage-js-style.css" type="text/css" media="all" />
 <link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/reset.css') ?>" type="text/css" media="all" />
 <link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/boxes.css') ?>" type="text/css" media="all" />
 <link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/clears.css') ?>" type="text/css" media="all" />
 <!--[if IE]><link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/iestyles.css') ?>" type="text/css" media="all" /><![endif]-->
 <!--[if lt IE 7]><link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/ie7minus.css') ?>" type="text/css" media="all" /><![endif]-->
-
-
-
 </head>
 
 <body>
@@ -95,11 +85,6 @@
         <div class="footer">
         <p class="legality">
             <?php echo Mage::helper('Mage_Install_Helper_Data')->__('Help Us to Keep Magento Healthy') ?> - <a href="http://www.magentocommerce.com/bug-tracking" id="bug_tracking_link"><strong><?php echo Mage::helper('Mage_Install_Helper_Data')->__('Report All Bugs') ?></strong></a> <?php echo Mage::helper('Mage_Install_Helper_Data')->__('(ver. %s)', Mage::getVersion()) ?><br/>
-<script type="text/javascript">
-//<![CDATA[
-mage.load.js('/pub/lib/mage/components/install_bug_tracker.js');
-//]]>
-</script>
             <?php echo Mage::helper('Mage_Install_Helper_Data')->__('Magento is a trademark of Magento Inc. Copyright &copy; %s Magento Inc.', date('Y')) ?>
         </p>
         </div>
