--- a/app/code/core/Mage/Install/view/install/locale.phtml
+++ b/app/code/core/Mage/Install/view/install/locale.phtml
@@ -48,14 +48,9 @@
 </div>
 </form>
 <script type="text/javascript">
-  mage.install = {
-        initialize: {
-            changeUrl: '<?php echo $this->getChangeUrl() ?>locale/' + $('#locale').val() + '/?timezone=' + $('#timezone').val() + '&amp;currency=' + $('#currency').val()
-        }
-    }
+    mage.event.observe('mage.install.initialize', function (e, o) {
+        o.changeUrl = '<?php echo $this->getChangeUrl();?>'
+    });
+    mage.load.jsSync('/pub/lib/mage/components/install/locale.js');
 
-  mage.event.observe('mage.install.initialize',function(e,o){
-      o.changeUrl='<?php echo $this->getChangeUrl() ?>locale/' + $('#locale').val() + '/?timezone=' + $('#timezone').val() + '&amp;currency=' + $('#currency').val()
-  });
-   mage.load.jsSync('/pub/lib/mage/components/install_locale.js');
 </script>
