Implement MAGETWO-1185: javascript refactor - added locale , page js - refactored js in mage.js validate.js config.js ,config.phtml,mysql4.phtml,mssql.phtml

--- a/app/code/core/Mage/Install/view/install/config.phtml
+++ b/app/code/core/Mage/Install/view/install/config.phtml
@@ -31,7 +31,7 @@
     <ul>
         <li>
             <label for="base_url"><?php echo $this->__('Base URL') ?> <span class="required">*</span></label><br />
-            <input type="text" name="config[unsecure_base_url]" id="base_url" value="<?php echo $this->getFormData()->getUnsecureBaseUrl() ?>" title="<?php echo $this->__('Base URL') ?>" class="required-entry validate-url input-text" />
+            <input type="text" name="config[unsecure_base_url]" id="base_url" value="<?php echo $this->getFormData()->getUnsecureBaseUrl() ?>" title="<?php echo $this->__('Base URL') ?>" data-validate="{required:true,validateUrl:true}" class="required-entry validate-url input-text" />
         </li>
         <li>
             <label for="backend_frontname"><?php echo $this->__('Admin Path') ?> <span class="required">*</span></label><br />
@@ -112,8 +112,29 @@
     <button class="form-button" type="submit"><span><?php echo $this->__('Continue') ?></span></button>
 </div>
 </form>
+<style>
+
+    input.mage-error{
+        background: none repeat scroll 0 0 #FAEBE7 !important;
+        border: 1px dashed #EB340A !important;
+        color:#DF280A ;
+    }
+    div.mage-error {
+        background: url("/pub/media/skin/install/default/default/default/en_US/images/validation_advice_bg.gif") no-repeat scroll 2px 1px transparent;
+        clear: both;
+        font-size: 0.95em;
+        font-weight: bold;
+        line-height: 1.25em;
+        margin-top: 3px;
+        min-height: 15px;
+        padding-left: 17px;
+        color:#DF280A ;
+    }
+</style>
 <script type="text/javascript">
-    var dataForm = new VarienForm('form-validate');
+mage.load.initValidate();
+mage.load.js('/pub/lib/mage/components/install/config.js');
+
 </script>
 <?php else: ?>
     <div><?php echo $this->__('Please set all required settings before clicking Continue') ?></div>
