--- a/app/code/core/Mage/Install/view/install/config.phtml
+++ b/app/code/core/Mage/Install/view/install/config.phtml
@@ -31,11 +31,11 @@
     <ul>
         <li>
             <label for="base_url"><?php echo $this->__('Base URL') ?> <span class="required">*</span></label><br />
-            <input type="text" name="config[unsecure_base_url]" id="base_url" value="<?php echo $this->getFormData()->getUnsecureBaseUrl() ?>" title="<?php echo $this->__('Base URL') ?>" data-validate="{required:true,validateUrl:true}" class="required-entry validate-url input-text" />
+            <input type="text" name="config[unsecure_base_url]" id="base_url" value="<?php echo $this->getFormData()->getUnsecureBaseUrl() ?>" title="<?php echo $this->__('Base URL') ?>" data-validate="{required:true,validateUrl:true}" class="input-text" />
         </li>
         <li>
-            <label for="backend_frontname"><?php echo $this->__('Admin Path') ?> <span class="required">*</span></label><br />
-            <input type="text" name="config[backend_frontname]" id="backend_frontname" value="<?php echo $this->getFormData()->getBackendFrontname() ?>" title="<?php echo $this->__('Admin Path') ?>" class="required-entry validate-data input-text" />
+            <label for="admin_frontname"><?php echo $this->__('Admin Path') ?> <span class="required">*</span></label><br />
+            <input type="text" name="config[admin_frontname]" id="admin_frontname" value="<?php echo $this->getFormData()->getAdminFrontname() ?>" title="<?php echo $this->__('Admin Path') ?>" data-validate="{required:true,validateData:true}" class="input-text" />
             <p style="margin-top:4px; line-height:1.3em; color:#666;">
                 <small><?php echo $this->__('Additional path added after Base URL to access your Administrative Panel (e.g. admin, backend, control etc.).') ?></small>
             </p>
@@ -65,7 +65,7 @@
             </p>
         </li>
         <li>
-            <input type="checkbox" name="config[use_secure]" id="use_secure" value="1" <?php if($this->getFormData()->getUseSecure()): ?>checked="checked"<?php endif ?> onclick="this.checked ? $('use_secure_options').show() : $('use_secure_options').hide(); return true;" />
+            <input type="checkbox" name="config[use_secure]" id="use_secure" value="1" <?php if($this->getFormData()->getUseSecure()): ?>checked="checked"<?php endif ?> />
             <label for="use_secure"><?php echo $this->__('Use Secure URLs (SSL)') ?></label><br />
             <p style="margin-top:4px; line-height:1.3em; color:#666;">
                 <small><?php echo $this->__('Enable this option only if you have SSL available.') ?></small>
@@ -75,7 +75,7 @@
     <ul id="use_secure_options" <?php if(!$this->getFormData()->getUseSecure()): ?>style="display:none"<?php endif ?>>
         <li>
             <label for="secure_base_url"><?php echo $this->__('Secure Base URL') ?> <span class="required">*</span></label><br />
-            <input type="text" name="config[secure_base_url]" id="secure_base_url" value="<?php echo $this->getFormData()->getSecureBaseUrl() ?>" title="<?php echo $this->__('Secure Base URL') ?>" class="required-entry validate-url input-text" />
+            <input type="text" name="config[secure_base_url]" id="secure_base_url" value="<?php echo $this->getFormData()->getSecureBaseUrl() ?>" title="<?php echo $this->__('Secure Base URL') ?>" data-validate="{required:true,validateUrl:true}" class="required-entry validate-url input-text" />
             <p style="margin-top:4px; line-height:1.3em; color:#666;">
                 <small><?php echo $this->__('Provide a complete base URL for SSL connection. For example: %s', '<strong>https://www.mydomain.com/magento/</strong>') ?></small>
             </p>
@@ -117,7 +117,7 @@
     input.mage-error{
         background: none repeat scroll 0 0 #FAEBE7 !important;
         border: 1px dashed #EB340A !important;
-        color:#DF280A ;
+
     }
     div.mage-error {
         background: url("/pub/media/skin/install/default/default/default/en_US/images/validation_advice_bg.gif") no-repeat scroll 2px 1px transparent;
