--- a/app/code/core/Mage/Install/view/install/begin.phtml
+++ b/app/code/core/Mage/Install/view/install/begin.phtml
@@ -30,7 +30,7 @@
     </p>
 
     <div class="button-set">
-        <button class="form-button disabled" type="submit" id="submitButton" disabled="disabled">
+        <button class="form-button mage-install-disabled" type="submit" id="submitButton" disabled="disabled">
             <span><?php echo $this->__('Continue') ?></span></button>
     </div>
 </form>
