--- a/app/code/core/Mage/Install/view/install/db/oracle.phtml
+++ b/app/code/core/Mage/Install/view/install/db/oracle.phtml
@@ -18,14 +18,14 @@
 <li>
     <div class="input-box">
         <label for="dbname"><?php echo $this->__('Database Name') ?> <span class="required">*</span></label><br />
-        <input type="text" name="connection[<?php echo $this->getIdPrefix()?>][db_name]" id="dbname" value="<?php echo $this->getFormData()->getDbName() ?>" title="<?php echo $this->__('Database Name') ?>" class="required-entry input-text" />
+        <input type="text" name="connection[<?php echo $this->getIdPrefix()?>][db_name]" id="dbname" value="<?php echo $this->getFormData()->getDbName() ?>" title="<?php echo $this->__('Database Name') ?>" data-validate="{required:true}" class="input-text" />
         <input type="hidden" name="connection[<?php echo $this->getIdPrefix()?>][db_host]" value=""/>
     </div>
 </li>
 <li>
     <div class="input-box">
         <label for="user"><?php echo $this->__('User Name') ?> <span class="required">*</span></label><br />
-        <input type="text" name="connection[<?php echo $this->getIdPrefix()?>][db_user]" id="user" value="<?php echo $this->getFormData()->getDbUser() ?>" title="<?php echo $this->__('Database user name') ?>" class="required-entry input-text" />
+        <input type="text" name="connection[<?php echo $this->getIdPrefix()?>][db_user]" id="user" value="<?php echo $this->getFormData()->getDbUser() ?>" title="<?php echo $this->__('Database user name') ?>" data-validate="{required:true}" class="input-text" />
     </div>
     <div class="input-box">
         <label for="password"><?php echo $this->__('User Password') ?></label><br />
@@ -35,7 +35,7 @@
 <li>
     <div class="input-box">
         <label for="prefix"><?php echo $this->__('Tables Prefix') ?></label><br />
-        <input type="text" name="connection[<?php echo $this->getIdPrefix()?>][db_prefix]" id="prefix" value="<?php echo $this->getFormData()->getDbPrefix() ?>" title="<?php echo $this->__('Tables Prefix') ?>" class="validate-data input-text" />
+        <input type="text" name="connection[<?php echo $this->getIdPrefix()?>][db_prefix]" id="prefix" value="<?php echo $this->getFormData()->getDbPrefix() ?>" title="<?php echo $this->__('Tables Prefix') ?>" data-validate="{validateData:true}" class="input-text" />
         <p style="margin-top:4px; line-height:1.3em; color:#666;">
             <small><?php echo $this->__('(Optional. Leave blank for no prefix)') ?></small>
         </p>
