--- a/app/code/core/Mage/Install/view/install/create_admin.phtml
+++ b/app/code/core/Mage/Install/view/install/create_admin.phtml
@@ -45,7 +45,7 @@
     <ul>
         <li>
             <label for="username"><?php echo $this->__('Username') ?> <span class="required">*</span></label><br/>
-            <input type="text" name="admin[username]" id="username" value="<?php echo $this->getFormData()->getUsername() ?>" title="<?php echo $this->__('Username') ?>"  data-validate="{required:true,validateUrl:true}" class="validate-password input-text"/>
+            <input type="text" name="admin[username]" id="username" value="<?php echo $this->getFormData()->getUsername() ?>" title="<?php echo $this->__('Username') ?>"  data-validate="{required:true,validateUrl:true}" class="input-text"/>
         </li>
         <li>
             <div class="input-box">
@@ -54,7 +54,7 @@
             </div>
             <div class="input-box">
                 <label for="confirmation"><?php echo $this->__('Confirm Password') ?> <span class="required">*</span></label><br/>
-                <input type="password" name="admin[password_confirmation]" title="<?php echo $this->__('Password Confirmation') ?>" id="confirmation" data-validate="{required:true,validateCpassword:true}" class="validate-cpassword input-text"/>
+                <input type="password" name="admin[password_confirmation]" title="<?php echo $this->__('Password Confirmation') ?>" id="confirmation" data-validate="{required:true, equalTo:'#password'}" class="input-text"/>
             </div>
         </li>
     </ul>
