Fix MAGETWO-1185: javascript refactor - added jquery.hook.js for form event - change css class name to be more general, for example mage-install-error to mage-error

--- a/app/code/core/Mage/Install/view/install/begin.phtml
+++ b/app/code/core/Mage/Install/view/install/begin.phtml
@@ -30,7 +30,7 @@
     </p>
 
     <div class="button-set">
-        <button class="form-button mage-install-disabled" type="submit" id="submitButton" disabled="disabled">
+        <button class="form-button mage-disabled" type="submit" id="submitButton" disabled="disabled">
             <span><?php echo $this->__('Continue') ?></span></button>
     </div>
 </form>
