--- a/pub/lib/mage/components/install/mage-js-style.css
+++ b/pub/lib/mage/components/install/mage-js-style.css
@@ -7,26 +7,26 @@
  * @license     {license_link}
  */
 
-button.mage-install-disabled {
+button.mage-disabled {
     background: none repeat scroll 0% 0% #bbb;
     border-color: #bbb;
     cursor: default;
     color: white;
 }
 
-button.mage-install-enabled {
+button.mage-enabled {
     background: #f18200;
     cursor: pointer;
     color: #c73615;
 }
 
-input.mage-install-error {
+input.mage-error {
     background: none repeat scroll 0 0 #FAEBE7 !important;
     border: 1px dashed #EB340A !important;
 
 }
 
-div.mage-install-error {
+div.mage-error {
     background: url("/pub/media/skin/install/default/default/default/en_US/images/validation_advice_bg.gif") no-repeat scroll 2px 1px transparent;
     clear: both;
     font-size: 0.95em;
