Implement MAGETWO-1185: javascript refactor - refactored css in mage-js-style.css.js - refactored js in mage.js - refactored js in create-admin.js - refactored js in begin.js - refactored phtml  in page.phtml - refactored phtml  in create_admin.phtml

--- a/app/code/core/Mage/Install/view/install/create_admin.phtml
+++ b/app/code/core/Mage/Install/view/install/create_admin.phtml
@@ -45,7 +45,7 @@
     <ul>
         <li>
             <label for="username"><?php echo $this->__('Username') ?> <span class="required">*</span></label><br/>
-            <input type="text" name="admin[username]" id="username" value="<?php echo $this->getFormData()->getUsername() ?>" title="<?php echo $this->__('Username') ?>"  data-validate="{required:true,validateUrl:true}" class="input-text"/>
+            <input type="text" name="admin[username]" id="username" value="<?php echo $this->getFormData()->getUsername() ?>" title="<?php echo $this->__('Username') ?>"  data-validate="{required:true}" class="input-text"/>
         </li>
         <li>
             <div class="input-box">
