--- a/app/code/core/Mage/Install/view/install/page.phtml
+++ b/app/code/core/Mage/Install/view/install/page.phtml
@@ -23,6 +23,7 @@
 
 <script type="text/javascript" src="/pub/lib/jquery/jquery.js"></script>
 <script type="text/javascript" src="/pub/lib/jquery/head.js"></script>
+<script type="text/javascript" src="/pub/lib/jquery/jquery.cookie.js"></script>
 <script type="text/javascript" src="/pub/lib/mage/mage.js"></script>
 <link rel="stylesheet" href="/pub/lib/mage/component/install/mage-js-style.css" type="text/css" media="all" />
 <link rel="stylesheet" href="<?php echo $this->getSkinUrl('css/reset.css') ?>" type="text/css" media="all" />
