Implement MAGETWO-1575: Ability to change attribute set during Product Creation/Editing

--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/edit.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/edit.phtml
@@ -10,7 +10,7 @@
 ?>
 <?php
 /**
- * Template for Mage_Adminhtml_Block_Catalog_Product_Edit
+ * @var $this Mage_Adminhtml_Block_Catalog_Product_Edit
  */
 ?>
 
@@ -27,6 +27,7 @@
         <?php endif; ?>
     <?php endif; ?>
     <?php if($this->getProductSetId() && $this->getIsConfigured()): ?>
+        <?php echo $this->getChangeAttributeSetButtonnHtml() ?>
         <?php echo $this->getSaveButtonHtml() ?>
         <?php echo $this->getSaveAndEditButtonHtml() ?>
     <?php endif; ?>
