--- a/app/code/core/Enterprise/ImportExport/view/adminhtml/scheduled/form/after.phtml
+++ b/app/code/core/Enterprise/ImportExport/view/adminhtml/scheduled/form/after.phtml
@@ -8,9 +8,33 @@
  * @license     {license_link}
  */
 ?>
+
+<?php
+/** @var $operation Enterprise_ImportExport_Model_Scheduled_Operation */
+$operation = Mage::registry('current_operation');
+$entitySubtype = $operation->getEntitySubtype();
+
+$formatVersions = array(
+    1 => Mage_ImportExport_Model_Source_Format_Version::VERSION_1,
+    2 => Mage_ImportExport_Model_Source_Format_Version::VERSION_2,
+);
+?>
 <script type="text/javascript">
     if (!$('export_filter_grid') && $('export_filter_container')) {
         $('export_filter_container').hide();
+    }
+    if ($('entity') && $F('entity') == 'customer') {
+        if ($('file_format_version')) {
+            if ('<?php echo $entitySubtype ?>' == '') {
+                $('file_format_version').value = '<?php echo $formatVersions[1] ?>';
+                $('entity_subtype').up('tr').hide();
+            } else {
+                $('file_format_version').value = '<?php echo $formatVersions[2] ?>';
+            }
+        }
+    } else {
+        $('file_format_version').up('tr').hide();
+        $('entity_subtype').up('tr').hide();
     }
     var serverType = $('server_type'),
         onChangeCallback = function(e) {
