Implement MAGETWO-1575: Ability to change attribute set during Product Creation/Editing

--- a/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/change_attribute_set_widgest.phtml
+++ b/app/code/core/Mage/Adminhtml/view/adminhtml/catalog/product/change_attribute_set_widgest.phtml
@@ -10,29 +10,35 @@
 /* @var $this Mage_Core_Block_Template */
 ?>
 <script type="text/javascript">//<[CDATA[
-(function($, window, document){
+(function($, window, document) {
     "use strict";
+
     $(function(){
         $('#attribute-set-info').dialog({
             title: 'Select Attribute Set',
             autoOpen: false,
+            id: '<?php echo strtolower($this->getNameInLayout()) ?>',
             minWidth: 560,
             modal: true,
             resizable: false,
-            buttons: {
-                "Close": function() {
+            buttons: [{
+                text: "Close",
+                id: '<?php echo strtolower($this->getNameInLayout()) . '-close-button' ?>',
+                click: function() {
                     $(this).dialog("close");
-                },
-                "Apply": function() {
+                }
+            },{
+                text: "Apply",
+                id: '<?php echo strtolower($this->getNameInLayout()) . '-apply-button' ?>',
+                click: function() {
                     var $attibuteSetId = $(this).find('#attribute_set_id');
                     var $form = $('#product_edit_form');
-                    var uri = document.location.href.replace(
-                        /catalog_product\/(\w+)\/set\/\d+/,
-                        'catalog_product/$1/set/'+ $attibuteSetId.val()
-                    );
+                    var uri = document.location.href.replace(/(\/|&)?set(\/|=)\d+/g, '');
+                    uri += (/\?/.test(uri)? '&' : '?');
+                    uri += 'set=' + window.encodeURIComponent($attibuteSetId.val());
                     $form.attr('action', uri).submit();
                 }
-            }
+            }]
         });
     });
 })(jQuery, window, document);
